# Qt-AI-Processing-Toolkit

./: .gitignore  CMakeLists.txt  README.md  emotion_keypoints.csv  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt  train_keypoints_model.py  train_model.py  train_znm1.py  train_znm2.py
dataset_tools/: README.md  dataset_maker.py  extract_keypoints.py  merge.py  prepare_ckplus.py
